# marketplace-dbseed

./: .gitignore  Dockerfile  README.md  dbseed.sh
conf/: development  minikube
elastic-sync/: Cargo.toml  README.md  foxwood-test.sh  product-autocomplete-test.sh  product-search-test.sh  products-mapping-with-analyzer.json  products-mapping.json  products-settings.json  store-autocomplete-test.sh  store-search-test.sh  stores-mapping-with-analyzer.json  stores-mapping.json  stores-settings.json
elastic-sync/src/: config.rs  main.rs  types.rs
sql/stores/: 00-init.stores.sql  10-defaults-seeds.sql  10-seed.stores.sql  20-random.rating.sql  config
