[package]
name = "elastic-sync"
version = "0.1.0"
authors = ["busarovalex <a.busarov@storiqa.com>"]

[dependencies]
structopt = "0.2.13"
env_logger = "0.6.0"
reqwest = "0.9.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
failure = "0.1.3"
log = "0.4.6"

[dependencies.postgres]
version = "0.15.2"
features = ["with-serde_json"]